<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="com.nanodegree.dalia.bakingapp.RecipeStepDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/player_view"
            android:layout_width="match_parent"
            android:layout_height="150dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/step_image"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="72dp"
            android:id="@+id/step_instructions"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/navigation_layout"
            android:paddingLeft="32dp"
            android:paddingRight="32dp">

            <Button
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:id="@+id/decrementStep"
                android:layout_alignParentLeft="true"
                android:background="@drawable/arrow_left"/>

            <Button
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:id="@+id/incrementStep"
                android:layout_alignParentRight="true"
                android:background="@drawable/arrow_right"/>

        </RelativeLayout>
    </LinearLayout>


</ScrollView>